drastically improve performance, add meta desc, change title, run prettier

--- a/index.html
+++ b/index.html
@@ -1,39 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Achtung die Kurve</title>
+        <link rel="stylesheet" href="style.css" />
+        <script src="script.js" defer></script>
+        <script src="drawicons.js" defer></script>
+        <script src="buildstartpage.js" defer></script>
+        <script src="startpage.js" defer></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet" />
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+        <link rel="manifest" href="favicon/site.webmanifest" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Achtung die Kurve</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <script src="drawicons.js" defer></script>
-    <script src="buildstartpage.js" defer></script>
-    <script src="startpage.js" defer></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
-</head>
-
-<body>
-    <div id="wrapper">
-        <div id="game_container">
-            <div id="game">
-                <div id="start_page"></div>
-                <canvas id="powerup_hitbox_canvas"></canvas>
-                <canvas id="powerup_visual_canvas"></canvas>
-                <canvas id="trails_hitbox_canvas"></canvas>
-                <canvas id="dots_canvas"></canvas>
-                <canvas id="ui_canvas"></canvas>
+    <body>
+        <div id="wrapper">
+            <div id="game_container">
+                <div id="game">
+                    <div id="start_page"></div>
+                    <canvas id="powerup_hitbox_canvas"></canvas>
+                    <canvas id="powerup_visual_canvas"></canvas>
+                    <canvas id="trails_hitbox_canvas"></canvas>
+                    <canvas id="dots_canvas"></canvas>
+                    <canvas id="ui_canvas"></canvas>
+                </div>
+                <h1 id="mobile_title">You can only play "Achtung die Kurve" on a PC with a keyboard</h1>
             </div>
-            <h1 id="mobile_title">You can only play "Achtung die Kurve" on a PC with a keyboard</h1>
         </div>
-    </div>
-</body>
-
+    </body>
 </html>
