--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Achtung, die Kurve!</title>
+        <title>Achtung, die Kurve! HTML5 version</title>
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
         <script src="drawicons.js" defer></script>
