--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Achtung, die Kurve! HTML5 version</title>
+        <title>Achtung, die Kurve!</title>
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
         <script src="drawicons.js" defer></script>
@@ -12,7 +12,7 @@
         <script src="startpage.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
